--- a/templates/index.html
+++ b/templates/index.html
@@ -24,6 +24,7 @@
         crossorigin=""></script>
         <!-- API key -->
         <script type="text/javascript" src="/static/config.js"></script>
+        <script type="text/javascript" src="/static/cities.js"></script>
         <!-- JS -->
         <script type="text/javascript" src="/static/logic.js"></script>
     </body>
