--- a/templates/index.html
+++ b/templates/index.html
@@ -4,13 +4,17 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Multi Axial Something else </title>
+        <title>Florida Voter Participation Analysis </title>
+        
+        
         <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/d3-tip/0.7.1/d3-tip.min.js"></script> -->
         <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.min.js"></script> -->
+        <link rel="shortcut icon" href="data:image/x-icon;," type="image/x-icon"> 
         <!-- Leaflet CSS -->
         <link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css"
-    integrity="sha512-xwE/Az9zrjBIphAcBb3F6JVqxf46+CDLwfLMHloNu6KEQCAWi6HcDUbeOfBIptF7tcCzusKFjFw2yuvEpDL9wQ=="
-    crossorigin=""/>
+        integrity="sha512-xwE/Az9zrjBIphAcBb3F6JVqxf46+CDLwfLMHloNu6KEQCAWi6HcDUbeOfBIptF7tcCzusKFjFw2yuvEpDL9wQ=="
+        crossorigin=""/>
+    
 
         <!-- Our CSS -->
         <!-- <link rel="stylesheet" type="text/css" href="/static/style.css" -->
@@ -19,21 +23,38 @@
 <body>
     <h1>   </h1>
 
-    <div id="map"></div>
+    <div id="bar-plot"></div>
     <div id="bar-plot"></div>
         <script src="https://d3js.org/d3.v5.min.js"></script>
+        <script type="text/javascript" src="../static/plots.js"></script>
         <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
-        <script src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js"
+        <!-- <script src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js"
         integrity="sha512-gZwIG9x3wUXg2hdXF6+rVkLF/0Vi9U8D2Ntg4Ga5I5BZpVkVxlJWbSQtXPSiUTtC0TjtGOmxa1AJPuV0CPthew=="
-        crossorigin=""></script>
+        crossorigin=""></script> -->
+        <!-- <script type="text/javascript" src="../static/features.geojson"></script> -->
         <!-- API key -->
         
-        <script type="text/javascript" src="../static/config.js"></script>
-        <script src="../static/plots.js"></script>
-        
+        <!-- <script type="text/javascript" src="../static/config.js"></script> -->
+        <!-- <script src="../static/logic.js"></script> -->
+        <!-- <script type="text/javascript" src="../static/features.geojson"></script> -->
         <!-- JS -->
+    
+    <!-- <div id="map"></div> -->
+    <!-- D3 -->
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.5.0/d3.min.js"></script>
+
+  <!-- MomentJS -->
+    <!-- <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.15.1/moment.min.js"></script> --> -->
+
+  <!-- Leaflet JavaScript -->
+    <!-- <script src="https://unpkg.com/leaflet@1.3.3/dist/leaflet.js"
+    integrity="sha512-tAGcCfR4Sc5ZP5ZoVz0quoZDYX5aCtEm/eu1KhSLj2c9eFrylXZknQYmxUssFaVJKvvc0dJQixhGjG2yXWiV9Q=="
+    crossorigin=""></script>
+    <script src="https://cdn.polyfill.io/v2/polyfill.min.js"></script>
+    <script type="text/javascript" src="../static/config.js"></script> -->
+    
+
         
-        <!-- <script type="text/javascript" src="/static/logic.js"></script> -->
         
     </body>
 
