--- a/templates/index2.html
+++ b/templates/index2.html
@@ -21,11 +21,15 @@
     <h1>   </h1>
 
     <div id="map"></div>
+    <div id="map"></div>
     <script src="https://unpkg.com/leaflet@1.3.3/dist/leaflet.js"
     integrity="sha512-tAGcCfR4Sc5ZP5ZoVz0quoZDYX5aCtEm/eu1KhSLj2c9eFrylXZknQYmxUssFaVJKvvc0dJQixhGjG2yXWiV9Q=="
     crossorigin=""></script>
+    <script src="https://d3js.org/d3.v5.min.js"></script>
     <script type="text/javascrispt" src="../static/config.js"></script>
+    <!-- <script type="text/javascript" src="../static/logic.js"></script> -->
     <script type="text/javascript" src="../static/logic2.js"></script>
+
 
         
     </body>
