--- a/templates/index.html
+++ b/templates/index.html
@@ -27,7 +27,7 @@
     <div id="bar-plot"></div>
         <script src="https://d3js.org/d3.v5.min.js"></script>
         <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
-        <script type="text/javascript" src="../static/plots.js"></script>
+        <script type="text/javascript" src="/static/plots.js"></script>
         <!-- <script src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js"
         integrity="sha512-gZwIG9x3wUXg2hdXF6+rVkLF/0Vi9U8D2Ntg4Ga5I5BZpVkVxlJWbSQtXPSiUTtC0TjtGOmxa1AJPuV0CPthew=="
         crossorigin=""></script> -->
