Added final files

--- a/templates/index.html
+++ b/templates/index.html
@@ -129,11 +129,11 @@
     <div id="tabs" class="al-tabs">
       <ul>
         <li>
-          <a href="#f1">USA Time</a>
+          <a href="#f1">Demographic Data</a>
         </li>
         <!--          <li><a href="#f2">Second Section</a></li>-->
         <li>
-          <a href="#f3">Data Analysis</a>
+          <a href="#f3">Voter Participation Rates</a>
         </li>
         <li>
           <a href="#f4">Meet the Team</a>
@@ -187,21 +187,22 @@
           <!--<hr class="featurette-divider">-->
 
           <div class="row featurette">
-            <div class="col-md-2">
-              <h2 class="featurette-heading">First featurette heading. <span class="text-muted">It'll blow your
-                  mind.</span></h2>
-              <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis
-                euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus
-                ac cursus commodo.</p>
+            <div class="col-md-12">
+              <h2 class="featurette-heading"> A Game of Numbers <span class="text-muted"></span></h2>
+
+              <p class="lead">When compared to other countries, the percentage of people who vote in the United States is low by international standards. 
+                An evaluation of recent elections shows that only about 60 percent of the eligible voting population actually voted during recent presidential elections.  
+                Voter turnout is even lower during midterm congressional elections, declining to a participation rate of around 40 percent. 
+                This does not, however, appear to be the trend in the area we observed. On average, about 70 – 75% of the eligible voting population voted.</p>
             </div>
             <div class="col-md-10">
               <div id="bar-plot"></div>
             </div>
           </div>
 
-          <hr class="featurette-divider">
+          <!-- <hr class="featurette-divider"> -->
 
-          <div class="row featurette">
+          <!-- <div class="row featurette">
             <div class="col-md-7 order-md-2">
               <h2 class="featurette-heading">Oh yeah, it's that good. <span class="text-muted">See for yourself.</span>
               </h2>
@@ -213,16 +214,17 @@
               <img class="featurette-image img-fluid mx-auto" data-src="holder.js/500x500/auto"
                 alt="Generic placeholder image">
             </div>
-          </div>
+          </div> -->
 
-          <hr class="featurette-divider">
+          <!-- <hr class="featurette-divider"> -->
 
           <div class="row featurette">
             <div class="col-md-12">
-              <h2 class="featurette-heading">By the Numbers<span class="text-muted">Checkmate.</span></h2>
-              <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis
-                euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus
-                ac cursus commodo.</p>
+              <h2 class="featurette-heading"> A Common Misconception <span class="text-muted"></span></h2>
+              <p class="lead">Research suggests that voter participation increases with family income. 
+                The 2016 presidential election demonstrated a distinct positive association between family income and participation in voting. 
+                The randomly selected zip codes analyzed for the State of Florida, however, do not echo such a demonstrative separation along income lines. 
+                This could be attributed to the unusually diverse age, cultural and residency populations for this area.</p>
               <table id="sampleTable">
                 <thead>
                   <tr>
@@ -235,83 +237,118 @@
                   </tr>
                 </thead>
                 <tbody>
-                  <tr>
-                    <td>33626</td>
-                    <td>135,000</td>
-                    <td>GRE</td>
-                    <td>64%</td>
-                    <td>75%</td>
-                  </tr>
-                  <tr>
-                    <td>60043</td>
-                    <td>136,000</td>
-                    <td>College</td>
-                    <td>62%</td>
-                    <td>77%</td>
-                  </tr>
-                  <tr>
-                    <td>60043</td>
-                    <td>136,000</td>
-                    <td>College</td>
-                    <td>62%</td>
-                    <td>77%</td>
-                  </tr>
-                  <tr>
-                    <td>60043</td>
-                    <td>136,000</td>
-                    <td>College</td>
-                    <td>62%</td>
-                    <td>77%</td>
-                  </tr>
-                  <tr>
-                    <td>60043</td>
-                    <td>136,000</td>
-                    <td>College</td>
-                    <td>62%</td>
-                    <td>77%</td>
-                  </tr>
-                  <tr>
-                    <td>60043</td>
-                    <td>136,000</td>
-                    <td>College</td>
-                    <td>62%</td>
-                    <td>77%</td>
-                  </tr>
-                  <tr>
-                    <td>60043</td>
-                    <td>136,000</td>
-                    <td>College</td>
-                    <td>62%</td>
-                    <td>77%</td>
-                  </tr>
-                  <tr>
-                    <td>60043</td>
-                    <td>136,000</td>
-                    <td>College</td>
-                    <td>62%</td>
-                    <td>77%</td>
-                  </tr>
-                  <tr>
-                    <td>60043</td>
-                    <td>136,000</td>
-                    <td>College</td>
-                    <td>62%</td>
-                    <td>77%</td>
-                  </tr>
-                  <tr>
-                    <td>60043</td>
-                    <td>136,000</td>
-                    <td>College</td>
-                    <td>62%</td>
-                    <td>77%</td>
-                  </tr>
-                  <tr>
-                    <td>60043</td>
-                    <td>136,000</td>
-                    <td>College</td>
-                    <td>62%</td>
-                    <td>77%</td>
-                  </tr>
+                    <tr>
+                        <td>33626</td>
+                        <td>$347,700</td>
+                        <td>Bachelor</td>
+                        <td>65%</td>
+                        <td>42%</td>
+                    </tr>
+                    <tr>
+                        <td>33629</td>
+                        <td>$492,300</td>
+                        <td>Bachelor</td>
+                        <td>65%</td>
+                        <td>45%</td>
+                    </tr>
+                    <tr>
+                        <td>32666</td>
+                        <td>$136,100</td>
+                        <td>HSG</td>
+                        <td>69%</td>
+                        <td>43%</td>
+                    </tr>
+                    <tr>
+                        <td>33635</td>
+                        <td>$164,700</td>
+                        <td>HSG</td>
+                        <td>65%</td>
+                        <td>39%</td>
+                    </tr>
+                    <tr>
+                        <td>33637</td>
+                        <td>$146,000</td>
+                        <td>HSG</td>
+                        <td>65%</td>
+                        <td>38%</td>
+                    </tr>
+                    <tr>
+                        <td>33701</td>
+                        <td>$344,500</td>
+                        <td>Bachelor</td>
+                        <td>72%</td>
+                        <td>41%</td>
+                    </tr>
+                    <tr>
+                        <td>33801</td>
+                        <td>$78,700</td>
+                        <td>HSG</td>
+                        <td>69%</td>
+                        <td>37%</td>
+                    </tr>
+                    <tr>
+                        <td>33803</td>
+                        <td>$133,100</td>
+                        <td>HSG</td>
+                        <td>69%</td>
+                        <td>42%</td>
+                    </tr>
+                    <tr>
+                        <td>33805</td>
+                        <td>$79,900</td>
+                        <td>HSG</td>
+                        <td>69%</td>
+                        <td>38%</td>
+                    </tr>
+                    <tr>
+                        <td>33980</td>
+                        <td>$140,800</td>
+                        <td>HSG</td>
+                        <td>84%</td>
+                        <td>43%</td>
+                    </tr>
+                    <tr>
+                        <td>33982</td>
+                        <td>$113,200</td>
+                        <td>HSG</td>
+                        <td>84%</td>
+                        <td>42%</td>
+                    </tr>
+                    <tr>
+                        <td>32667</td>
+                        <td>$236,200</td>
+                        <td>HSG</td>
+                        <td>70%</td>
+                        <td>44%</td>
+                    </tr>
+                    <tr>
+                        <td>32668</td>
+                        <td>$153,500</td>
+                        <td>HSG</td>
+                        <td>74%</td>
+                        <td>42%</td>
+                    </tr>
+                    <tr>
+                        <td>32669</td>
+                        <td>$197,900</td>
+                        <td>HSG</td>
+                        <td>70%</td>
+                        <td>43%</td>
+                    </tr>
+                    <tr>
+                        <td>33541</td>
+                        <td>$69,300</td>
+                        <td>HSG</td>
+                        <td>75%</td>
+                        <td>41%</td>
+                    </tr>
+                    <tr>
+                        <td>32176</td>
+                        <td>$214,800</td>
+                        <td>HSG</td>
+                        <td>73%</td>
+                        <td>43%</td>
+                    </tr>   
                 </tbody>
               </table>
             </div>
@@ -320,7 +357,7 @@
                     </div>-->
           </div>
 
-          <hr class="featurette-divider">
+          <!-- <hr class="featurette-divider"> -->
         </div>
       </div>
       <!-- /.container-->
@@ -334,9 +371,7 @@
             <h2>Juan Castellanos</h2>
             <p>A native of El Salvador, Juan is a senior at Georgia Tech. He is active in his community and aspires to
               impact the world through service and politics.</p>
-            <p>
-              <a class="btn btn-secondary" href="#" role="button">View details &raquo;</a>
-            </p>
+            
           </div>
           <!-- /.col-lg-4 -->
           <div class="col-lg-4">
@@ -346,9 +381,6 @@
             <h2>Audrey Lawrence</h2>
             <p>Audrey actively works to impact social engagement and involvement through the sharing of information. She
               is actively involved in voter participation activities as behind the scenes support.</p>
-            <p>
-              <a class="btn btn-secondary" href="#" role="button">View details &raquo;</a>
-            </p>
           </div>
           <!-- /.col-lg-4 -->
           <div class="col-lg-4">
@@ -358,9 +390,6 @@
             <h2>Michael Rucker</h2>
             <p>Michael is an voracious reader and dedicated husband and father. He spends his days troubleshooting code
               and solving the world's problems from his computer.</p>
-            <p>
-              <a class="btn btn-secondary" href="#" role="button">View details &raquo;</a>
-            </p>
           </div>
           <!-- /.col-lg-4 -->
         </div>
@@ -412,7 +441,8 @@
     crossorigin=""></script>
   <!-- Marker Cluster JS -->
   <script type="text/javascript" src="https://unpkg.com/leaflet.markercluster@1.0.3/dist/leaflet.markercluster.js"></script>
-  <script type="text/javascript" src="/static/logic2.js"></script>
+  <script type="text/javascript" src="/static/logic.js"></script>
+  <!-- <script type="text/javascript" src="/static/logic3.js"></script> -->
 </body>
 
 </html>
